Docker & MongoDB connections are added

--- a/CodeCaseAzerionDynamicConfigStructure.UI/appsettings.json
+++ b/CodeCaseAzerionDynamicConfigStructure.UI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MongoDBConnectionString": "mongodb://localhost:27017"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
