--- a/FirstService/appsettings.json
+++ b/FirstService/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MongoDBConnectionString": "mongodb://localhost:27017"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
