XUnit test project is added to the solution

--- a/CodeCaseAzerionDynamicConfigStructure.UI/appsettings.json
+++ b/CodeCaseAzerionDynamicConfigStructure.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MongoDBConnectionString": "mongodb://localhost:27017"
+    "MongoDBConnectionString": "mongodb://localhost:27017/test?retryWrites=true&w=majority"
   },
   "Logging": {
     "LogLevel": {
