--- a/FirstService/appsettings.json
+++ b/FirstService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MongoDBConnectionString": "mongodb://localhost:27017"
+    "MongoDBConnectionString": "mongodb://localhost:27017/test?retryWrites=true&w=majority"
   },
   "Logging": {
     "LogLevel": {
